# simple-filevault-python

./: LICENSE  README.md  pyproject.toml
examples/: sample.txt  sample.txt.enc
src/filevault/: cli.py  crypto_engine.py  file_manager.py  main.py
src/filevault/crypto/: aes.py  crypto.py  crypto_engine.py
